<resources>
    <string name="app_name">IT Guru Weather</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="temp">Temp</string>
    <string name="weather_type">Weather type</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="logout">Logout</string>
</resources>